bela-sys/vendor/bela/include/Bela.h

/** \endcond */

/**
 * \ingroup auxtask
 *
 * Xenomai priority level for audio processing. Maximum possible priority is 99.
 * In general, all auxiliary tasks should have a level lower than this unless for\
 * special purposes where the task needs to interrupt audio processing.
 */
#define BELA_AUDIO_PRIORITY		95
struct option;
/**
 * \ingroup render
 * \brief Structure holding audio and sensor settings and pointers to I/O data buffers.
 *
 * This structure is passed to setup(), render() and cleanup() and provides access to 
 * Bela's I/O functionality. It is initialised in Bela_initAudio() based on the contents 
 * of the BelaInitSettings structure.
 */
typedef struct {
	/// \brief Buffer holding audio input samples
	///
	/// This buffer allows Bela's audio input data to be read during render().
	/// By default the buffer contains data from all the audio input channels arranged
	/// in interleaved format.
	///
	/// Every time render() runs this buffer is filled with a block of new audio samples.
	/// The block is made up of frames, individual slices of time consisting of one sample
	/// taken from each audio input channel simultaneously. The number of frames per
	/// block is given by context->audioFrames, and the number of audio input channels
	/// by context->audioInChannels. The length of this buffer is the product of these
	/// two values.
	///
	/// The buffer can be accessed manually with standard array notation or more 
	/// conveniently using the audioRead() utility.
	///
	/// \b Note: this element is available in render() only.
	const float * const audioIn;

	/// \brief Buffer holding audio output samples
	///
	/// This buffer allows Bela's audio output data to be written during render().
	/// By default the buffer must contain data from all the audio output channels
	/// arranged in interleaved format.
	///
	/// Every time render() runs it is the job of the developer to fill this buffer with 
	/// a block of new audio samples, structured in the same way as context->audioIn.
	///
	/// The buffer can be accessed manually with standard array notation or more 
	/// conveniently using the audioWrite() utility.
	///
	/// \b Note: this element is available in render() only.
	float * const audioOut;

	/// \brief Buffer holding analog input samples
	///
	/// This buffer allows Bela's analog input data to be read during render().
	/// By default the buffer contains data from all the analog input channels arranged
	/// in interleaved format.
	///
	/// Every time render() runs this buffer is filled with a block of new analog samples.
	/// The block is made up of frames, individual slices of time consisting of one sample
	/// taken from each analog input channel simultaneously. The number of frames per
	/// block is given by context->analogFrames, and the number of analog input channels
	/// by context->analogInChannels. The length of this buffer is the product of these
	/// two values.
	///
	/// The buffer can be accessed manually with standard array notation or more 
	/// conveniently using the analogRead() utility.
	///
	/// \b Note: this element is available in render() only.
	const float * const analogIn;

	/// \brief Buffer holding analog output samples
	///
	/// This buffer allows Bela's analog output data to be written during render().
	/// By default the buffer must contain data from all the analog output channels
	/// arranged in interleaved format.
	///
	/// Every time render() runs it is the job of the developer to fill this buffer with 
	/// a block of new analog samples, structured in the same way as context->analogIn.
	///
	/// The buffer can be accessed manually with standard array notation or more 
	/// conveniently using the analogWrite() utility.
	///
	/// \b Note: this element is available in render() only.
	float * const analogOut;

	/// \brief Buffer holding digital input/output samples
	///
	/// This buffer allows Bela's digital GPIO data to be read and written during render().
	///
	/// The buffer can be accessed manually with standard array notation or somewhat more 
	/// conveniently using the digitalRead() and digitalWrite() utilities.
	///
	/// \b Note: this element is available in render() only.
	uint32_t * const digital;

	/// \brief The number of audio frames per block
	///
	/// Every time render() runs context->audioIn is filled with a block of new audio 
	/// samples. The block is made up of frames, individual slices of time consisting of 
	/// one sample taken from each audio input channel simultaneously.
	///
	/// This value determines the number of audio frames in each block and can be adjusted 
	/// in the IDE settings tab (or via the command line arguments) from 2 to 128, 
	/// defaulting to 16.
	///
	/// This value also determines how often render() is called, and reducing it decreases 
	/// audio latency at the cost of increased CPU consumption.
	const uint32_t audioFrames;
	/// \brief The number of audio input channels
	const uint32_t audioInChannels;
	/// \brief The number of audio output channels
	const uint32_t audioOutChannels;
	/// \brief The audio sample rate in Hz
	const float audioSampleRate;

	/// \brief The number of analog frames per block
	///
	/// Every time render() runs context->analogIn is filled with a block of new analog 
	/// samples. The block is made up of frames, individual slices of time consisting of 
	/// one sample taken from each analog input channel simultaneously.
	///
	/// This value determines the number of analog frames in each block. It cannot be
	/// set directly as it is dependant on the number of audio frames per block 
	/// (context->audioFrames) and the analog sample rate (context->analogSampleRate).
	///
	/// This value will be 0 if analog I/O is disabled.
	const uint32_t analogFrames;

	/// \brief The number of analog input channels
	///
	/// This will be 0 if analog I/O is disabled.
	const uint32_t analogInChannels;

	/// \brief The number of analog output channels
	///
	/// This will be 0 if analog I/O is disabled.
	const uint32_t analogOutChannels;

	/// \brief Analog sample rate in Hz
	///
	/// This value determines the rate at which each analog input is sampled, and is
	/// directly related to the number of analog channels available. It can be adjusted 
	/// in the IDE settings tab (or via the command line arguments) to 22050, 44100
	/// or 88200, allowing 8, 4, or 2 analog channels respectively. By default, all 8
	/// channels are sampled at 22050Hz.
	///
	/// If analog I/O is disabled, this value is 0.
	const float analogSampleRate;

	/// Number of digital frames per period
	const uint32_t digitalFrames;
	/// \brief Number of digital channels
	///
	/// Currently this will always be 16, unless digital I/O is disabled, in which case it will be 0.
	const uint32_t digitalChannels;
	/// Digital sample rate in Hz (currently always 44100.0)
	const float digitalSampleRate;

	/// \brief Number of elapsed audio frames since the start of rendering.
	///
	/// This holds the total number of audio frames as of the beginning of the current block. To
	/// find the current number of analog or digital frames elapsed, multiply by the ratio of the
	/// sample rates (e.g. half the number of analog frames will have elapsed if the analog sample
	/// rate is 22050).
	const uint64_t audioFramesElapsed;

	/// \brief Number of multiplexer channels for each analog input.
	///
	/// This will be 2, 4 or 8 if the multiplexer capelet is enabled, otherwise it will be 1.
	/// 2, 4 and 8 correspond to 16, 32 and 64 analog inputs, respectively.
	const uint32_t multiplexerChannels;

	/// \brief Multiplexer channel corresponding to the first analog frame.
	///
	/// This indicates the multiplexer setting corresponding to the first analog frame in the
	/// buffer.
	const uint32_t multiplexerStartingChannel;

	/// \brief Buffer which holds multiplexed analog inputs, when multiplexer capelet is enabled.
	///
	/// Because the analog in buffer size may be smaller than a complete cycle of the multiplexer
	/// capelet, this buffer will always be big enough to hold at least one complete cycle of all
	/// channels. It will be null if the multiplexer capelet is not enabled.
	const float * const multiplexerAnalogIn;

	/// \brief Flags for whether audio expander is enabled on given analog channels.
	///
	/// Bits 0-15, when set, indicate audio expander enabled on the analog inputs. Bits 16-31
	/// indicate audio expander enabled on the analog outputs.
	const uint32_t audioExpanderEnabled;

	/// \brief Other audio/sensor settings
	///
	/// Binary combination of flags including:
	///
	/// BELA_FLAG_INTERLEAVED
	/// BELA_FLAG_ANALOG_OUTPUTS_PERSIST
	/// BELA_FLAG_DETECT_UNDERRUNS
	/// BELA_FLAG_OFFLINE
	const uint32_t flags;

	/// Name of running project.
	char projectName[MAX_PROJECTNAME_LENGTH];

	/// Number of detected underruns.
	const unsigned int underrunCount;

	/// \brief Which thread this context is running on.
	///
	/// Used for multithreaded rendering. Values range from 0 to (threadCount - 1).
	const uint32_t thisThread;

	/// \brief Total number of threads in use for render()
	///
	/// Used for multithreaded rendering.
	const uint32_t threadCount;

} BelaContext;
/** \ingroup auxtask
 *
 * Auxiliary task variable. Auxiliary tasks are created using createAuxiliaryTask() and
 * automatically cleaned up after cleanup() finishes.
 */
typedef void* AuxiliaryTask;	// Opaque data type to keep track of aux tasks
// *** User-defined render functions ***

/**
 * \defgroup render User-defined render functions
 *
 * These three functions must be implemented by the developer in every Bela program.
 * Typically they appear in their own .cpp source file.
 *
 * @{
 */

/**
 * \brief User-defined initialisation function which runs before audio rendering begins.
 *
 * This function runs once at the beginning of the program, after most of the system
 * initialisation has begun but before audio rendering starts. Use it to prepare any
 * memory or resources that will be needed in render().
 *
 * \param context Data structure holding information on sample rates, numbers of channels,
 * frame sizes and other state. Note: the buffers for audio, analog and digital data will
 * \b not yet be available to use. Do not attempt to read or write audio or sensor data
 * in setup().
 * \param userData An opaque pointer to an optional user-defined data structure. Whatever
 * is passed as the second argument to Bela_initAudio() will appear here.
 *
 * \return true on success, or false if an error occurred. If no initialisation is
 * required, setup() should return true.
 */
bool setup(BelaContext *context, void *userData);
/**
 * \brief User-defined callback function to process audio and sensor data.
 *
 * This function is called regularly by the system every time there is a new block of
 * audio and/or sensor data to process. Your code should process the requested samples
 * of data, store the results within \c context, and return.
 *
 * \param context Data structure holding buffers for audio, analog and digital data. The
 * structure also holds information on numbers of channels, frame sizes and sample rates,
 * which are guaranteed to remain the same throughout the program and to match what was
 * passed to setup().
 * \param userData An opaque pointer to an optional user-defined data structure. Will
 * be the same as the \c userData parameter passed to setup().
 */
void render(BelaContext *context, void *userData);
int Bela_gettime(struct timespec* tp); // same as Bela_clock_gettime(CLOCK_MONOTONIC, tp)
int Bela_clock_gettime(clockid_t clockid, struct timespec* tp);
int Bela_nanosleep(const struct timespec *req, struct timespec *rem);
void Bela_printFlushBuffers();
/** @} */

/**
 * \defgroup auxtask Auxiliary task support
 *
 * These functions are used to create separate real-time tasks (threads) which run at lower
 * priority than the audio processing. They can be used, for example, for large time-consuming
 * calculations which would take more than one audio frame length to process, or they could be
 * used to communicate with external hardware when that communication might block or be delayed.
 *
 * All auxiliary tasks used by the program should be created in setup(). The tasks
 * can then be scheduled at will within the render() function.
 *
 * @{
 */

// *** Functions for creating auxiliary tasks ***

/**
 * \brief Create a new auxiliary task.
 *
 * This function creates a new auxiliary task which, when scheduled, runs the function specified
 * in the first argument. Note that the task does not run until scheduleAuxiliaryTask() is called.
 * Auxiliary tasks should be created in `setup()` and never in `render()` itself.
 *
 * The second argument specifies the real-time priority. Valid values are between 0
 * and 99, and usually should be lower than \ref BELA_AUDIO_PRIORITY. Tasks with higher priority always
 * preempt tasks with lower priority.
 *
 * \param callback Function which will be called each time the auxiliary task is scheduled, unless it is already running.
 * \param priority Xenomai priority level at which the task should run.
 * \param name Name for this task, which should be unique system-wide (no other running program should use this name).
 * \param arg The argument passed to the callback function.
 */
AuxiliaryTask Bela_createAuxiliaryTask(void (*callback)(void*), int priority, const char *name, void* arg
#ifdef __cplusplus
/**
 * \brief Run an auxiliary task which has previously been created.
 *
 * This function will schedule an auxiliary task to run.
 *
 * If the task is already running, calling this function has no effect.
 * If the task is not running (e.g.: a previous invocation has returned), the \b callback function defined
 * in Bela_createAuxiliaryTask() will be called and it will be passed the \b arg pointer as its only parameter.
 *
 * This function is typically called from render() to start a lower-priority task. The function
 * will not run immediately, but only once any active higher priority tasks have finished.
 *
 * \param task Task to schedule for running.
 * \return 0 if the task was successfully scheduled, a positive error number otherwise. The most frequent error will be EBUSY, if the task was still running as a consequence of a previous call.
 */
int Bela_scheduleAuxiliaryTask(AuxiliaryTask task);
AuxiliaryTask Bela_runAuxiliaryTask(void (*callback)(void*), int priority = 0, void* arg = nullptr);
void Bela_deleteAllAuxiliaryTasks();
/**
 * \defgroup iofunctions I/O functions and constants
 *
 * These functions and macros are used for audio, analog and digital I/O. All the
 * I/O functions require the BelaContext data structure from render() to be passed
 * in. This means that these functions are, by design, \b only usable from within
 * the rendering thread.
 *
 * The naming conventions are loosely derived from the Arduino environment, and the
 * syntax is similar. Unlike Arduino, the I/O functions require the frame number at which
 * the read or write should take place, since all I/O happens synchronously with the
 * audio clock.
 *
 * @{
 */

enum BelaDigitalDirection {
	INPUT = 0,
	OUTPUT = 1,
};