bela-sys/src/bindings.rs

unsafe extern "C" {
    pub fn Bela_gettime(tp: *mut timespec) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Bela_clock_gettime(clockid: clockid_t, tp: *mut timespec) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Bela_nanosleep(req: *const timespec, rem: *mut timespec) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Bela_printFlushBuffers();
}
unsafe extern "C" {
    #[doc = " \\brief Create a new auxiliary task.\n\n This function creates a new auxiliary task which, when scheduled, runs the function specified\n in the first argument. Note that the task does not run until scheduleAuxiliaryTask() is called.\n Auxiliary tasks should be created in `setup()` and never in `render()` itself.\n\n The second argument specifies the real-time priority. Valid values are between 0\n and 99, and usually should be lower than \\ref BELA_AUDIO_PRIORITY. Tasks with higher priority always\n preempt tasks with lower priority.\n\n \\param callback Function which will be called each time the auxiliary task is scheduled, unless it is already running.\n \\param priority Xenomai priority level at which the task should run.\n \\param name Name for this task, which should be unique system-wide (no other running program should use this name).\n \\param arg The argument passed to the callback function."]
    pub fn Bela_createAuxiliaryTask(
        callback: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
        priority: ::core::ffi::c_int,
        name: *const ::core::ffi::c_char,
        arg: *mut ::core::ffi::c_void,
    ) -> AuxiliaryTask;
}
unsafe extern "C" {
    #[doc = " \\brief Run an auxiliary task which has previously been created.\n\n This function will schedule an auxiliary task to run.\n\n If the task is already running, calling this function has no effect.\n If the task is not running (e.g.: a previous invocation has returned), the \\b callback function defined\n in Bela_createAuxiliaryTask() will be called and it will be passed the \\b arg pointer as its only parameter.\n\n This function is typically called from render() to start a lower-priority task. The function\n will not run immediately, but only once any active higher priority tasks have finished.\n\n \\param task Task to schedule for running.\n \\return 0 if the task was successfully scheduled, a positive error number otherwise. The most frequent error will be EBUSY, if the task was still running as a consequence of a previous call."]
    pub fn Bela_scheduleAuxiliaryTask(task: AuxiliaryTask) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Bela_deleteAllAuxiliaryTasks();
}
pub const INPUT: BelaDigitalDirection = 0;
pub const OUTPUT: BelaDigitalDirection = 1;
#[doc = " \\defgroup iofunctions I/O functions and constants\n\n These functions and macros are used for audio, analog and digital I/O. All the\n I/O functions require the BelaContext data structure from render() to be passed\n in. This means that these functions are, by design, \\b only usable from within\n the rendering thread.\n\n The naming conventions are loosely derived from the Arduino environment, and the\n syntax is similar. Unlike Arduino, the I/O functions require the frame number at which\n the read or write should take place, since all I/O happens synchronously with the\n audio clock.\n\n @{"]
pub type BelaDigitalDirection = ::core::ffi::c_uint;
